<resources>
    <string name="app_name">Калькулятор Бодибилдера</string>
    <string name="bodyType">Идеальные пропорции для натурального атлета</string>
    <string name="body_type">Тип телосложения</string>
    <string name="day_calories">Суточная калорийность</string>
    <string name="ideal_proportion">Идеальные пропорции</string>
    <string name="weight_in_caloriescalculation">Вес</string>
    <string name="height_in_caloriescalculation">Рост</string>
    <string name="age_for_caloriescalculation">Возраст</string>
    <string name="ideal_proportion_description_chest">Грудь:</string>
    <string name="ideal_proportion_description_basin">Таз:</string>
    <string name="ideal_proportion_description_waist">Талия:</string>
    <string name="ideal_proportion_description_hip">Бедро:</string>
    <string name="ideal_proportion_description_neck">Шея:</string>
    <string name="ideal_proportion_description_biceps">Бицепс:</string>
    <string name="ideal_proportion_description_shin">Голень:</string>
    <string name="ideal_proportion_description_wrist">Предплечье:</string>
    <string name="button_in_caloriescalculation">=</string>
    <string name="rezult_in_caloriescalculation">=</string>
    <string name="circumference_volume">Запястье (см):</string>
    <string name="wristcircumference">Обхват запястья</string>
    <string-array name="lifestyle">
        <item>Сидячий образ жизни</item>
        <item>Спорт 1-3 дня в неделю</item>
        <item>Спорт 3-5 дней в неделю</item>
        <item>Спорт 6-7 дней в неделю</item>
        <item>Очень высокая активность</item>
    </string-array>
    <string-array name="target">
        <item>похудение</item>
        <item>набор</item>
    </string-array>
    <string-array name="sex">
        <item>мужской</item>
        <item>женский</item>
    </string-array>
    <string name="action_setttings">Settings:</string>
    <string name="action_units">Единицы измерения</string>
    <string name="action_disable_advertising">Отключить рекламу</string>
    <string name="action_give_feedback">Оставить отзыв</string>
    <string name="action_version">Версия</string>
    <string name="idealProportion_textView">Ваши пропорции:</string>
    <string name="ektomorph_textView">Эктоморф</string>
    <string name="ektomorph_text_information">Эктоморф — типичный «худыш», будь то мужчина или женщина. Тело эктоморфа имеет легкое
    строение с мелкими суставами и небольшой мышечной массой, длинными конечностями, вытянутыми
    мышцами и узкими плечами. Чаще всего вес эктоморфов в норме или ниже нормы.\n \nТакой тип
    телосложения наименее подвержен набору веса благодаря чуть более высокому базовому обмену
    веществ, гормональному статусу и повышенной повседневной активности.\n \n
        Занимаясь бодибилдингом, эктоморф должен уделять минимум внимания аэробным тренировкам,
        а всю программу тренировок строить на тяжелых базовых упражнениях, в виде сплита. Быстрый
        обмен веществ, происходящий в них, зачастую затрудняет процесс наращивания веса в том случае,
        если следовать более традиционным диетическим программам. Диета эктоморфа должна состоять из
        высококалорийной пищи, богатой белками и углеводами. Эктоморф может придерживаться менее строгих
        правил в питании, по сравнению с другими типами телосложения, так как его метаболизм не склонен
        к липосинтезу. Таким образом, для эктоморфа более важно количество съеденного, нежели состав
        продуктов.
        +\n \nЭктоморфы тяжело
    набирают вес. Тренировки для этого типа должны быть короткими и интенсивными с фокусом на
    основных группах мышц.</string>
    <string name="сharacteristics_of_the_ectomorph">Характеристики:</string>
    <string name="ekto_characteristics">- «Хрупкое» строение.\n- Плоская грудь.\n- Узкие плечи.\n- Небольшая мышечная масса.\n- Повышенный базовый обмен веществ.</string>
    <string name="mezomorph_textView">Мезоморф</string>
    <string name="mezomorph_characteristics">- Атлетичны.\n\n- Крепкое телосложение.\n\n- Хорошо очерченный мышечный рельеф.\n\n- Легко набирает мышечную массу.\n\n- Набирает вес легче, чем эктоморф.</string>
    <string name="mezomorphTextView">У мезоморфов крупная кость, большая мышечная масса и крепкое телосложение,
        обычно они довольно атлетичны. Это идеальное телосложение для бодибилдинга и многих других спортивных дисциплин.
        Людям с этим типом телосложения относительно просто набрать и сбросить массу.\n\nЭтот типаж лучше всего реагирует на
        силовые тренировки, поэтому увеличение мышечной массы у них происходит довольно быстро, особенно у новичков.
        Обратная сторона медали заключается в том, что жировая масса набирается с аналогичной легкостью.\n\n
    Если вы мезоморф и ваша цель — убрать не только жировую прослойку, но и объемы, стоит сфокусироваться на питании
        и кардионагрузках. Когда лишний жир ушел, можно добавить силовые тренировки на проблемные зоны.\n\n</string>
    <string name="endomorph_text_view">Эндоморф</string>
    <string name="endomorph_characteristics">- Мягкое тело с округлыми формами.\n- Легко набирает жировую и мышечную массу.\n- Низкий рост.\n- Тяжело сбрасывает вес.\n- Плохо выраженная мускулатура.</string>
    <string name="endomorphTextView">Эндоморфы чаще других типов имеют лишний вес, даже потребляя при этом меньше
        калорий.\n\nЭндоморф нуждается в относительно небольшом количестве углеводов, гораздо лучше его организм воспримет
        энергию из жиров. При составлении рациона делайте ставку на пониженное количество углеводов и повышенное содержание
        жиров.\n\nЧтобы свести набор жировой прослойки к минимуму, тренировки обязательно должны включать в себя кардионагрузки
        наравне с силовыми упражнениями.\n\nЭндоморфы, как правило, обладают мягкими гармоничными очертаниями фигуры, женщины
        от природы наделены прекрасными формами. Приобретя устойчивые привычки здорового питания и физической активности, люди
        этого типажа без большого труда могут поддерживать стабильный вес и стройность.</string>
    <string name="Sex1">Пол:</string>
    <string name="targetEditText">Цель:</string>
    <string name="navigation_drawer_opens">Text</string>
    <string name="navigation_drawer_closes" />
    <string name="trainingForEkto">
       Вы имеете преимущество в наборе качественной мышечной массы (без жировых отложений). Но для
        достижения этой цели потребуется много усилий! Многие эктоморфы отметили, что их тела лучше
        всего реагируют на довольно тяжелые веса и более медленный темп тренировки с более
        длительными периодами отдыха между тренировками. Если целью является увеличение веса, не
        тренируйтесь ежедневно или слишком долго на тренировочной сессии, потому что вы в конечном
        итоге сжигаете много драгоценных калорий.\n\nУпотребляйте качественные продукты, и будьте
        готовы много есть, если хотите набрать мышцы.  Не бойтесь углеводов и не уходите из-за стола
        голодными.

    </string>
    <string name="trainingForEkto2">- Эктоморфы нередко тренируются в достаточно быстром темпе. Обычно их результаты
        как в восстановлении, так и в силе улучшаются, если темп тренировки понизить. Интенсивная тренировка - стимул,
        который обеспечивает рост мышц. Интенсивность можно повысить разными путями; два наилучших - это упражнения
        с меньшим весом и укороченным отдыхом между подходами и упражнения с большим весом и долгим отдыхом между подходами.
        Поскольку тренировки с высокой интенсивностью необходимы, чтобы заставить мышцы эктоморфа расти, упор нужно
        сделать на второй вариант: работать с большими весами и долго (3-7 мин) отдыхать между подходами для того, чтобы
        обеспечить хорошее восстановление мышц для дальнейшей интенсивной работы.\n \n - Эктоморфы должны давать своему
        организму достаточный отдых между тренировками. Абсолютный минимум продолжительности отдыха для эктоморфа - 48
        часов между тренировками. И никогда не нужно тренировать мышечную группу, если она не полностью восстановилась
        после предыдущей тренировки. При использовании многоповторного тренинга следует увеличить продолжительность отдыха
        между тренировками, если мышцы не восстановились.\n \n - Из-за высокой скорости метаболических реакций эктоморфы
        должны спать не менее 8-10 часов в сутки. Полезен дневной сон в течение 1-2 часов.\n \n - Для стимуляции восстановления
        можно проводить занятия во время отдыха, продолжительностью 5-15 минут с интенсивностью и весами не более 20 процентов
        (желательно меньше). Если восстановление происходит достаточно быстро, то рекомендуется отказаться от этого метода,
        иначе можно сбить восстановление.</string>
    <string name="mezoTrainingString">Тренировки для мезоморфа</string>
    <string name="weight_maxWeight">Вес</string>
    <string name="reps_maxWeight">Повторения</string>
    <string name="gymnastic_maxWeight">Упражнение</string>
    <string name="max_weight_dialog_information_string">   Данный калькулятор поможет выяснить,
        какой вес вы сможете поднять в одном повторении в таких упражнениях как приседания со штангой
        на плечах, жим штанги лёжа и становая тяга.\n\n
        Калькулятор оценивает ваш максимум в один раз, исходя из того веса, который вы можете
        поднимать, и количества чистых повторений, которые вы можете достичь до
        мышечного отказа.\n\n
        Диапазон допустимых повторений 1-10!\n\n Имейте в виду, что это только оценки. Чем меньше ваш
        показатель, тем более точной будет оценка вашего повторного максимума. Указание веса, который вы
        можете сделать для 3 повторений, даст вам более точное число, чем для 10 повторений.\n\n
        </string>
    <string name="optimal_pulse_information_string">Метод определения границ частоты сердцебиений
        используется для определения оптимального диапазона (целевой зоны) частоты пульса во время
        занятий спортом.\n\n
        Границы диапазона находятся приблизительно между значением пульса в спокойном
        состоянии и в состоянии максимальной частоты сердечных сокращений.\n\n
        Целевая зона сердцебиений находится в пределах от 50  до 95 процентов от значения максимальной
        частоты сердечных сокращений и выбирается в зависимости от индивидуальных различий физического
        состояния человека.
</string>
    <string name="height_settings">Рост</string>
    <string name="weight_settings">Вес</string>
    <string-array name="spinner_gymnastic">
        <item>Приседания</item>
        <item>Жим лежа</item>
        <item>Становая тяга</item>
    </string-array>
    <string-array name="spinner_unit_height">
        <item>кг</item>
        <item>фунт</item>
    </string-array>
    <string-array name="spinner_unit_weight">
        <item>см</item>
        <item>дюйм</item>
    </string-array>
    <string name="ok">OK</string>
    <string name="IdealProportion">Идеальные пропорции</string>
    <string name="IdealProportionNeck">1. Шея:</string>
    <string name="IdealProportionChest">2. Грудь:</string>
    <string name="IdealProportionBiceps">3. Бицепс:</string>
    <string name="IdealProportionWaist">4. Талия:</string>
    <string name="IdealProportionWrist">5. Предплечье:</string>
    <string name="IdealProportionHip">6. Бедро:</string>
    <string name="IdealProportionShin">7. Голень:</string>
    <string name="ektone">- Узкие бедра и ключицы.</string>
    <string name="ectotwo">- Тонкие суставы (запястье/лодыжки).</string>
    <string name="ectothree">- Тонкие кости.</string>
    <string name="ectofour">- Длинные и тонкие мышцы.</string>
    <string name="ectofive">- Длинные конечности.</string>
    <string name="eccc">Эктоморф</string>
    <string name="result">Результат</string>
</resources>